--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,55 @@
 // Navigation code here
+
+.top{
+    .flexcenter();
+    flex-direction:column;
+    background-color:@nav-bg;
+    
+    
+    
+
+
+    h1{
+        font-size:3.5rem;
+        padding:20px;
+        color:@nav-font;
+    }
+
+    .nav{
+        
+        font-size: 2rem;
+        padding-bottom:20px;
+        
+
+        a{
+            text-decoration: none;
+            color:@ebony-clay;
+            padding: 0 15px 0 15px;
+            
+
+            &:visited{
+                color:@nav-font;
+            }
+        }
+        
+    }
+
+
+}
+
+.topimg{
+    .flexcenter();
+
+        .img{
+    
+            width:70%;
+            margin-left:10%;
+            margin-right:10%;
+
+    }
+}
+
+
+
+
+
