--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,20 @@
 // Mixins Here
+
+.flexcenter{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.button(@bg:@header-font-color, @width:200px, @font-color:@wild-sand){
+display:block;
+background-color:@bg;
+width:@width;
+border-radius:5px;
+padding: 5px 5px 5px 5px;
+text-align:center;
+color:@font-color;
+font-size: 1.8rem;
+width:30%;
+
+}
