mobile format complete, stretch animation complete

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,9 @@
     .flexcenter();
     flex-direction:column;
     background-color:@nav-bg;
+    @media @phone {
+        width:100%;
+    }
     
     
     
@@ -13,12 +16,24 @@
         font-size:3.5rem;
         padding:20px;
         color:@nav-font;
+        @media @phone {
+            width:100%;
+            font-size:5rem;
+            text-align:center;
+        }
     }
 
     .nav{
         
         font-size: 2rem;
         padding-bottom:20px;
+        @media @phone {
+            width:100%;
+            font-size:2rem;
+            text-align:center;
+            margin-left:5%;
+            margin-right:5%;
+        }
         
 
         a{
@@ -45,6 +60,10 @@
             width:70%;
             margin-left:10%;
             margin-right:10%;
+            @media @phone {
+                width:100%;
+                
+            }
 
     }
 }
