--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,17 @@
+@keyframes animation {
+  from {
+    background-color: #23293B;
+  }
+  to {
+    background-color: #F6F6F6;
+  }
+  from {
+    color: #F6F6F6;
+  }
+  to {
+    color: #23293B;
+  }
+}
 .flexcenter {
   display: flex;
   justify-content: center;
@@ -172,14 +186,35 @@ p {
   flex-direction: column;
   background-color: #F6F6F6;
 }
+@media (max-width:500px) {
+  .top {
+    width: 100%;
+  }
+}
 .top h1 {
   font-size: 3.5rem;
   padding: 20px;
   color: #454A59;
 }
+@media (max-width:500px) {
+  .top h1 {
+    width: 100%;
+    font-size: 5rem;
+    text-align: center;
+  }
+}
 .top .nav {
   font-size: 2rem;
   padding-bottom: 20px;
+}
+@media (max-width:500px) {
+  .top .nav {
+    width: 100%;
+    font-size: 2rem;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
 .top .nav a {
   text-decoration: none;
@@ -198,6 +233,11 @@ p {
   width: 70%;
   margin-left: 10%;
   margin-right: 10%;
+}
+@media (max-width:500px) {
+  .topimg .img {
+    width: 100%;
+  }
 }
 footer {
   color: #22283B;
@@ -220,11 +260,22 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width:500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width:500px) {
+  .home .space-images img {
+    width: 90%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -242,8 +293,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width:500px) {
+  .home .walk {
+    width: 90%;
+    flex-direction: column-reverse;
+    padding: 0;
+    margin: 5%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width:500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -262,9 +326,26 @@ footer {
   font-size: 1.8rem;
   width: 30%;
 }
+.home .walk .walk-text .btn:hover {
+  animation-name: animation;
+  animation-duration: 1s;
+}
+@media (max-width:500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 30px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width:500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    padding-bottom: 20px;
+    margin: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
