--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,11 +19,22 @@
     flex-wrap: wrap;
     width: 100%;
 
+    .sky, .launch{
+      @media @phone {
+        display:none;
+        
+    }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width:90%;
+        
+    }
     }
   }
 
@@ -45,9 +56,20 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      width:90%;
+      flex-direction:column-reverse;
+      padding:0;
+      margin:5%;
+      
+  }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width:100%;
+        
+    }
 
       h3 {
         margin-bottom: 10px;
@@ -59,12 +81,28 @@
 
       .btn {
         .button(@ebony-clay, 200px, @wild-sand);
+        &:hover{
+          animation-name:animation;
+          animation-duration:1s;
+        }
+
+        @media @phone {
+          width:100%;
+          padding:30px;
+          
+      }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width:100%;
+        padding-bottom: 20px;
+        margin:0;
+        
+    }
       
       img {
         width: 100%;
